# Serious_Python

./: .gitignore
sp_hw1/: pyproject.toml
sp_hw1/artifacts/: README.md
sp_hw1/sp_hw1/: hw1.py
sp_hw2/: Dockerfile  docker-compose.yml  pyproject.toml
sp_hw2/sp_hw2/: hw2.py
sp_hw2/sp_hw2/artifacts/: result_tex_file.tex
sp_hw2/tests/: tests.py
sp_hw3/: pyproject.toml
sp_hw3/artifacts/medium/: matrix+.pkl  matrix@.pkl  matrix_mul.pkl
sp_hw3/sp_hw3/: easy.py  medium.py
sp_hw4/: pyproject.toml
sp_hw4/artifacts/: easy.txt  hard_logging.txt  medium_logging.txt  medium_time_results.txt
sp_hw4/sp_hw4/: easy.py  hard.py  hw4.py  medium.py
sp_hw5/: pyproject.toml
sp_hw5/artifacts/medium/: all_entries.json  filtered_entries.json
sp_hw5/sp_hw5/: easy.py  hw5.py  medium.py  utils.py
