[tool.poetry]
name = "sp-hw1"
version = "0.1.0"
description = ""
authors = ["IvanKozlov98 <ivan1998olimp@yandex.ru>"]
readme = "README.md"
packages = [{include = "sp_hw1"}]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.7.1"
networkx = "^3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
