[tool.poetry]
name = "sp-hw2"
version = "0.1.0"
description = ""
authors = ["IvanKozlov98 <ivan1998olimp@yandex.ru>"]
readme = "README.md"
packages = [{include = "sp_hw2"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
