[tool.poetry]
name = "sp-hw2"
version = "0.1.0"
description = ""
authors = ["IvanKozlov98 <ivan1998olimp@yandex.ru>"]
readme = "README.md"
packages = [{include = "sp_hw2"}]

[tool.poetry.dependencies]
python = "^3.8"
sp-hw1 = {version = "^0.1.0", source = "test"}
pdflatex = "^0.1.3"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
