[tool.poetry]
name = "sp-hw5"
version = "0.1.0"
description = ""
authors = ["IvanKozlov98 <ivan1998olimp@yandex.ru>"]
readme = "README.md"
packages = [{include = "sp_hw5"}]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^23.1.0"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
