[tool.poetry]
name = "sp-hw5"
version = "0.1.0"
description = ""
authors = ["IvanKozlov98 <ivan1998olimp@yandex.ru>"]
readme = "README.md"
packages = [{include = "sp_hw5"}]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^23.1.0"
aiohttp = "^3.8.4"
cloudscraper = "^1.2.69"
beautifulsoup4 = "^4.12.2"
selenium = "^4.8.3"
aiomisc = "^17.0.9"
pymorphy2 = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
